Alignment fix

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -10,7 +10,7 @@
 
 .project-name
 {
-    padding-top: 50px;
+    padding-top: 95px;
 }
 
 ul {
